--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -5,36 +5,34 @@
 sidebar     : !!map
   sections  : !!seq
 
-    - !!map       # SYSTEM
-      uuid      : !!str e54f0447-8a34-4908-be2b-6a5e95eb8237
+    - !!map     # SYSTEM
       title     : !!str System
       nav_order : !!int 1
       contexts  : !!seq
         - !!map
-          uuid      : !!str 94854e83-3816-42e4-8d5f-f48d3a54483e
-          title     : !!str Logical Volume Manager
+          name      : !!str lvm
+          full_name : !!str Logical Volume Manager
           nav_order : !!int 1
         - !!map
-          uuid      : !!str 80a79960-1e97-479e-8d0e-789516293fc0
-          title     : !!str B-tree filesystem
+          name      : !!str btrfs
+          full_name : !!str B-tree filesystem
           nav_order : !!int 2
         - !!map
-          uuid      : !!str e86d8089-1595-42e6-9b3b-de1c9db31b8d
-          title     : !!str Ext4
+          name      : !!str ext4
+          full_name : !!str Ext4 filesystem
           nav_order : !!int 3
 
-    - !!map       # GRAPHICAL USER INTERFACE
-      uuid      : !!str b27b08c0-dad7-4a1f-aefe-b821cab76a6a
+    - !!map     # GRAPHICAL USER INTERFACE
       title     : !!str Graphical User Interface
       nav_order : !!int 2
       contexts  : !!seq
         - !!map
-          uuid      : !!str 9e55133c-c83d-43fb-9386-af81ef91b6dc
-          title     : !!str Desktop environment
+          name      : !!str de
+          full_name : !!str Desktop environment
           nav_order : !!int 1
         - !!map
-          uuid      : !!str 83bc464a-a758-4b5c-a83b-65e92548c5c6
-          title     : !!str Window manager
+          name      : !!str wm
+          full_name : !!str Window manager
           nav_order : !!int 2
 
 ####################################
@@ -53,16 +51,6 @@ includes : !!seq
         title : !!str Mirror site
         path  : !!str system/preparation/installation-image/mirror-site.md
 
-  - !!map   # INSTALLATION MEDIA
-    title : !!str installation-media
-    tabs  : !!seq
-      - !!map
-        title : !!str Dd
-        path  : !!str system/preparation/installation-media/dd.md
-      - !!map
-        title : !!str Etcher
-        path  : !!str system/preparation/installation-media/etcher.md
-
   - !!map   # PARTITIONING
     title : !!str partitioning
     tabs  : !!seq
@@ -72,16 +60,6 @@ includes : !!seq
       - !!map
         title : !!str BIOS / GPT
         path  : !!str system/storage/partitioning/bios-gpt.md
-
-  - !!map   # RAID
-    title : !!str raid
-    tabs  : !!seq
-      - !!map
-        title : !!str RAID 1
-        path  : !!str system/storage/raid/raid1.md
-      - !!map
-        title : !!str RAID 0
-        path  : !!str system/storage/raid/raid0.md
 
   - !!map   # BOOT LOADER
     title : !!str boot-loader
