--- a/_data/system/lvm/luks_mirroring_raid.yaml
+++ b/_data/system/lvm/luks_mirroring_raid.yaml
@@ -1,16 +1,40 @@
-has_raid        : !!bool true
-has_encryption  : !!bool true
-has_lvm         : !!bool true
-has_swapfile    : !!bool false
+has_raid            : !!bool true
+has_encryption      : !!bool true
+has_lvm             : !!bool true
+has_swapfile        : !!bool false
+has_encrypted_boot  : !!bool true
+filesystem          : !!str ext4
 
-# PROFILE
-profile : !!map
-  partitioning    : !!str luks_mirroring_raid
-  installation    : !!str raid_lvm
-  initialization  : !!str busybox_luks_lvm
-  devices_table   : !!str none
+# DEVICE TABLES
+device_tables : !!map
+  has_fstab               : !!bool false
+  has_crypttab            : !!bool false
+  has_crypttab_initramfs  : !!bool false
+
+# PACSTRAP
+pacstrap  : !!map
+  has_needed_packages : !!bool true
+  needed_packages     : !!str lvm2 mdadm
+
+# MKINITCPIO
+mkinitcpio  : !!map
+  has_config  : !!bool true
+  config      : !!str |
+                FILES=(/etc/luks-keys/cryptlvm.keyfile)
+                HOOKS=(base udev autodetect modconf block encrypt mdadm_udev lvm2 filesystems keyboard keymap fsck)
+
+# GRUB
+grub  : !!map
+  has_config  : !!bool true
+  config      : !!str |
+                GRUB_CMDLINE_LINUX_DEFAULT="cryptdevice=UUID=device_uuid:cryptlvm:allow-discards cryptkey=rootfs:/etc/luks-keys/cryptlvm.keyfile root=/dev/grp/root loglevel=3 quiet"
+                GRUB_ENABLE_CRYPTODISK=y
 
 # STORAGE
+sgdisk  : !!str |
+          $ sgdisk -o _bootpart_ -n=2:0:-100M -t=2:fd00 -R=/dev/sdb /dev/sda
+          $ sgdisk -G /dev/sdb
+
 devices : !!seq
   - !!map
     node  : !!str /dev/sda
@@ -39,21 +63,17 @@ partitions  : !!seq
 raid  : !!map
   level : !!int 1
   array : !!map
-    efi     : !!str /dev/md/efi
-    system  : !!str /dev/md/lvm
-
-# STEPS
-steps  : !!seq
-  - !!map
-    id              : !!int 1
-    encryption_ctx  : !!str system Raid array
-    filesystem_ctx  : !!str volumes
+    efi     : !!map
+      name  : !!str /dev/md/efi
+      nodes : !!str /dev/sda1 /dev/sdb1
+    system  : !!map
+      name  : !!str /dev/md/lvm
+      nodes : !!str /dev/sda2 /dev/sdb2
 
 # ENCRYPTION
 containers  : !!seq
   - !!map
-    id                  : !!int 1
-    step_id             : !!int 1
+    page                : !!str Storage
     is_bootable         : !!bool true
     name                : !!str cryptlvm
     node                : !!str /dev/md/lvm
@@ -85,21 +105,41 @@ lvm : !!map
       size  : !!str "100%FREE - 5 GiB"
 
 # FILESYSTEM
-filesystem  : !!map
-  name    : !!str ext4
-  configs : !!seq
+ext4  : !!map
+  has_swap  : !!bool true
+  elements  : !!seq
     - !!map
-      step_id     : !!int 1
-      has_swap    : !!bool true
-      format_cmd  : !!str |
-                    $ mkfs.ext4 -L ROOT /dev/grp/root
-                    $ mkfs.ext4 -L VAR /dev/grp/var
-                    $ mkfs.ext4 -L HOME /dev/grp/home
-      mount_cmd   : !!str |
-                    $ mount /dev/grp/root /mnt
-                    $ mkdir /mnt/{var,home}
-                    $ mount /dev/grp/var /mnt/var
-                    $ mount /dev/grp/home /mnt/home
-      swap_cmd    : !!str |
-                    $ mkswap -L SWAP /dev/grp/swap
-                    $ swapon /dev/grp/swap
+      page        : !!str Storage
+      node        : !!str /dev/grp/root
+      label       : !!str ROOT
+      mountpoint  : !!str /mnt
+      has_dir     : !!bool false
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/swap
+      label       : !!str SWAP
+      mountpoint  : !!str none
+      has_dir     : !!bool false
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/var
+      label       : !!str VAR
+      mountpoint  : !!str /mnt/var
+      has_dir     : !!bool true
+      dir         : !!str var
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/home
+      label       : !!str HOME
+      mountpoint  : !!str /mnt/home
+      has_dir     : !!bool true
+      dir         : !!str home
+
+# TEXTS
+txts : !!seq
+  - !!map
+    page    : !!str Storage
+    include : !!map
+      encryption_ctx  : !!str System Raid array
+      filesystem_ctx  : !!str volumes
+      efi_ctx         : !!str EFI Raid array
