--- a/_data/system/lvm/luks_multiple_partitions.yaml
+++ b/_data/system/lvm/luks_multiple_partitions.yaml
@@ -1,16 +1,43 @@
-has_raid        : !!bool false
-has_encryption  : !!bool true
-has_lvm         : !!bool true
-has_swapfile    : !!bool false
+has_raid            : !!bool false
+has_encryption      : !!bool true
+has_lvm             : !!bool true
+has_swapfile        : !!bool false
+has_encrypted_boot  : !!bool true
+filesystem          : !!str ext4
 
-# PROFILE
-profile : !!map
-  partitioning    : !!str luks_multiple_partitions
-  installation    : !!str lvm
-  initialization  : !!str systemd_luks_lvm
-  devices_table   : !!str luks_multiple_partitions
+# DEVICE TABLES
+device_tables : !!map
+  has_fstab               : !!bool false
+  has_crypttab            : !!bool false
+  has_crypttab_initramfs  : !!bool true
+  crypttab_initramfs      : !!str |
+                            cryptlvmUUID     UUID=device_UUID   /etc/luks-keys/cryptlvmUUID.keyfile
+                            cryptlvmUUID     UUID=device_UUID   /etc/luks-keys/cryptlvmUUID.keyfile
+
+# PACSTRAP
+pacstrap  : !!map
+  has_needed_packages : !!bool true
+  needed_packages     : !!str lvm2
+
+# MKINITCPIO
+mkinitcpio  : !!map
+  has_config  : !!bool true
+  config      : !!str |
+                FILES=(/etc/luks-keys/cryptlvmUUID.keyfile /etc/luks-keys/cryptlvmUUID.keyfile)
+                HOOKS=(base systemd autodetect modconf block sd-encrypt sd-lvm2 filesystems keyboard sd-vconsole fsck)
+
+# GRUB
+grub  : !!map
+  has_config  : !!bool true
+  config      : !!str |
+                GRUB_CMDLINE_LINUX_DEFAULT="rd.luks.options=discard root=/dev/grp/root loglevel=3 quiet"
+                GRUB_ENABLE_CRYPTODISK=y
 
 # STORAGE
+sgdisk  : !!str |
+          $ sgdisk -o _bootpart_ -n=2:0:0 -t=2:8309 /dev/sda
+          $ sgdisk -o -n=1:0:0 -t=1:8309 /dev/sdb
+
 devices : !!seq
   - !!map
     node  : !!str /dev/sda
@@ -32,18 +59,10 @@ partitions  : !!seq
     type      : !!str Linux LUKS partition
     size      : !!str 100%FREE
 
-# STEPS
-steps  : !!seq
-  - !!map
-    id              : !!int 1
-    encryption_ctx  : !!str partitions
-    filesystem_ctx  : !!str volumes
-
 # ENCRYPTION
 containers  : !!seq
   - !!map
-    id                  : !!int 1
-    step_id             : !!int 1
+    page                : !!str Storage
     is_bootable         : !!bool true
     name                : !!str cryptlvmUUID
     node                : !!str /dev/sda2
@@ -52,8 +71,7 @@ containers  : !!seq
     has_keyfile         : !!bool true
     keyfile             : !!str /etc/luks-keys/cryptlvmUUID.keyfile
   - !!map
-    id                  : !!int 2
-    step_id             : !!int 1
+    page                : !!str Storage
     is_bootable         : !!bool true
     name                : !!str cryptlvmUUID
     node                : !!str /dev/sdb1
@@ -85,21 +103,41 @@ lvm : !!map
       size  : !!str "100%FREE - 5 GiB"
 
 # FILESYSTEM
-filesystem  : !!map
-  name    : !!str ext4
-  configs : !!seq
+ext4  : !!map
+  has_swap  : !!bool true
+  elements  : !!seq
     - !!map
-      step_id     : !!int 1
-      has_swap    : !!bool true
-      format_cmd  : !!str |
-                    $ mkfs.ext4 -L ROOT /dev/grp/root
-                    $ mkfs.ext4 -L VAR /dev/grp/var
-                    $ mkfs.ext4 -L HOME /dev/grp/home
-      mount_cmd   : !!str |
-                    $ mount /dev/grp/root /mnt
-                    $ mkdir /mnt/{var,home}
-                    $ mount /dev/grp/var /mnt/var
-                    $ mount /dev/grp/home /mnt/home
-      swap_cmd    : !!str |
-                    $ mkswap -L SWAP /dev/grp/swap
-                    $ swapon /dev/grp/swap
+      page        : !!str Storage
+      node        : !!str /dev/grp/root
+      label       : !!str ROOT
+      mountpoint  : !!str /mnt
+      has_dir     : !!bool false
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/swap
+      label       : !!str SWAP
+      mountpoint  : !!str none
+      has_dir     : !!bool false
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/var
+      label       : !!str VAR
+      mountpoint  : !!str /mnt/var
+      has_dir     : !!bool true
+      dir         : !!str var
+    - !!map
+      page        : !!str Storage
+      node        : !!str /dev/grp/home
+      label       : !!str HOME
+      mountpoint  : !!str /mnt/home
+      has_dir     : !!bool true
+      dir         : !!str home
+
+# TEXTS
+txts : !!seq
+  - !!map
+    page    : !!str Storage
+    include : !!map
+      encryption_ctx  : !!str LUKS partitions
+      filesystem_ctx  : !!str volumes
+      efi_ctx         : !!str partition
