--- a/_data/system/lvm/luks_multiple_partitions.yaml
+++ b/_data/system/lvm/luks_multiple_partitions.yaml
@@ -67,6 +67,7 @@ containers  : !!seq
     name                : !!str cryptlvmUUID
     node                : !!str /dev/sda2
     type                : !!str luks1
+    init_method         : !!str password
     has_detached_header : !!bool false
     has_keyfile         : !!bool true
     keyfile             : !!str /etc/luks-keys/cryptlvmUUID.keyfile
@@ -76,6 +77,7 @@ containers  : !!seq
     name                : !!str cryptlvmUUID
     node                : !!str /dev/sdb1
     type                : !!str luks1
+    init_method         : !!str password
     has_detached_header : !!bool false
     has_keyfile         : !!bool true
     keyfile             : !!str /etc/luks-keys/cryptlvmUUID.keyfile
