--- a/_data/system/lvm/luks_single_partition.yaml
+++ b/_data/system/lvm/luks_single_partition.yaml
@@ -56,6 +56,7 @@ containers  : !!seq
     name                : !!str cryptlvm
     node                : !!str /dev/sda2
     type                : !!str luks1
+    init_method         : !!str password
     has_detached_header : !!bool false
     has_keyfile         : !!bool true
     keyfile             : !!str /etc/luks-keys/cryptlvm.keyfile
