--- a/_data/system/lvm/luks_mirroring_raid.yaml
+++ b/_data/system/lvm/luks_mirroring_raid.yaml
@@ -130,5 +130,5 @@ txts : !!seq
     page    : !!str Storage
     include : !!map
       encryption_ctx  : !!str System Raid array
-      filesystem_ctx  : !!str volumes
+      filesystem_ctx  : !!str LVM logical volumes
       efi_ctx         : !!str EFI Raid array
