--- a/_data/system/lvm/luks_multiple_partitions.yaml
+++ b/_data/system/lvm/luks_multiple_partitions.yaml
@@ -129,5 +129,5 @@ txts : !!seq
     page    : !!str Storage
     include : !!map
       encryption_ctx  : !!str LUKS partitions
-      filesystem_ctx  : !!str volumes
+      filesystem_ctx  : !!str LVM logical volumes
       efi_ctx         : !!str partition
